# data-team-technical-case

./: .dockerignore  .gitignore  Makefile  README.md  README_en.md  README_fr.md
app/: pyproject.toml
app/src/jump/data_platform/app/: app.py
cli/: README.md  pyproject.toml
cli/src/jump/data_platform/cli/: app.py
cli/src/jump/data_platform/cli/commands/: extract.py  load.py  transform.py
cli/src/jump/data_platform/sources/app/: app.py
cli/src/jump/data_platform/sources/app/models/: __init__.py  client.py  user.py
cli/src/jump/data_platform/sources/crm/: __init__.py
cli/src/jump/data_platform/sources/crm/models/: customer.py
cli/src/jump/data_platform/tools/: __init__.py  dbt.py  duckdb.py  sqlite.py
dbt/: README.md  dbt_project.yml
dbt/analyses/: DAT-03.sql
dbt/models/marts/kpi/: _marts__kpi.yml  marts__kpi__monthly_turnover.sql  marts__kpi__nps.sql
dbt/models/staging/app/: _staging__app.yml  staging__app__clients.sql  staging__app__invoices.sql  staging__app__job_contracts.sql
dbt/models/staging/crm/: _staging__crm.yml  staging__crm__customers.sql
dbt/tests/marts/kpi/: marts__kpi__total_turnover_amount_should_be_equals_to_total_invoice_amount.sql
docker/: Dockerfile  data-platform
docs/: architecture.excalidraw  data-model.excalidraw
exercices/: data-analyst.md
exercices/positions/: data-analyst.md  data-analyst_en.md  data-analyst_fr.md
exercices/tasks/: DAT-01.md  DAT-01_en.md  DAT-01_fr.md  DAT-02.md  DAT-02_en.md  DAT-02_fr.md  DAT-03.md  DAT-03_en.md  DAT-04_en.md  DAT-04_fr.md  DAT-05.md  DAT-05_en.md  DAT-05_fr.md
(+29 files in other folders)
