[project]
name = "jump-data-platform-app"
version = "0.1.0"
description = "Data Platform"
authors = [
    {name = "Adrien", email = "adrien@join-jump.com"},
]
dependencies = [
    "click>=8.1.7",
    "faker>=20.1.0",
    "unidecode>=1.3.7",
    "pendulum>=2.1.2",
    "duckdb==0.9.2",
    "dbt-core>=1.7.3",
    "dbt-duckdb>=1.7.0",
    "halo>=0.0.31",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "UNLICENSED"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
data-platform = "jump.data_platform.cli:app"

[tool.pdm.build]
package-dir = "src" 
includes = ["src/jump"]

